add DTOMapper and SearchController
